# csp22ex

./: README.md
ex00/: testing.txt
ex01/: ising2d.py  ising2d_skeleton.py
ex01/cpp_version/: Makefile  data.csv  (+5 more)
ex01/ex01_sol/ising2d_cpp/: CMakeLists.txt  README.md  input.json  main_ising.cpp  plot.py  series.py
ex01/ex01_sol/ising2d_cpp/include/: ising_lattice.hpp  metropolis.hpp
ex01/ex01_sol/ising2d_cpp/src/: ising_lattice.cpp  metropolis.cpp
ex02/: .gitignore  Makefile  ising3d_task1  ising3d_task1.cpp  ising3d_task2_3  ising3d_task2_3.cpp  ising3d_task4  ising3d_task4.cpp  plot_task1.py  plot_task2_3.py  plot_task4.py  run_task1.sh  run_task2_3.sh  run_task4.sh  task1.csv  task2_3_data.csv  task4_data.csv
ex03/: .gitignore  Makefile  ising3D_creutz  ising3D_creutz.cpp  ising3D_creutz.py  plot.py  plot_task3.py  run_task2.sh  run_task3.sh  task2_data.csv  task3_data.csv
ex04/: Makefile  data_task2.csv  ising3d_mr2t2  ising3d_mr2t2.cpp  ising3d_mr2t2_task3  ising3d_mr2t2_task3.cpp  ising3d_wolff  ising3d_wolff.cpp  ising3d_wolff_task3  ising3d_wolff_task3.cpp  plot_task2.py  plot_task3.py  run_task2.sh  run_task3.sh  task3_info.csv
ex05/: Makefile  data_task1.csv  data_task2.csv  data_task3.csv  ising3d_mr2t2  ising3d_mr2t2.cpp  ising3d_wolff  ising3d_wolff.cpp  plot_task1_2.py  run_task1.sh  run_task2.sh  run_task3.sh
ex06/: .gitignore  SupervisedLearningSkeleton.ipynb
ex07/: md_verlet_basic.py  md_verlet_fast.py
ex08/: md_verlet_celllist.py
ex09/: md_verlet_diatomic.py
ex10/: md_verlet_celllist.py
ex11/: collision_1d.py  collision_2d.py
(+120 files in other folders)
